--- a/css/barchart.css
+++ b/css/barchart.css
@@ -83,6 +83,7 @@ text {
   color: #484848;
 	line-height: 1;
   padding: 18px 12px 19px;
+  font-family: "Open sans";
 }
 
 /* Creates a small triangle extender for the tooltip */
